@@ -1,5 +1,11 @@
 2008-08-27 Braden McDaniel  <braden@endoframe.com>
 
+	* src/Makefile.am
+	(dist_openvrml_player_ui_DATA): Applied dist_ prefix.
+	(EXTRA_DIST): Removed openvrml_player_ui_DATA.
+
+2008-08-27 Braden McDaniel  <braden@endoframe.com>
+
 	* configure.ac: Apply AC_CONFIG_MACRO_DIR; require at least
 	autoconf 2.59.
 
